static/css/styles.css
/* ... */
#sidebar-first ul.menu li a, #audience-menu ul.menu li a {
  color: #252525;
  display: block;
  padding: 10px 15px;
  text-decoration: none; }

#sidebar-first ul.menu li a:hover, #audience-menu ul.menu li a:hover, #sidebar-first ul.menu li a:active, #audience-menu ul.menu li a:active, #sidebar-first ul.menu li a:focus, #audience-menu ul.menu li a:focus {
  background-color: #c34500;
  color: #fff; }

#sidebar-first ul.menu li.active-trail > a.active:hover, #audience-menu ul.menu li.active-trail > a.active:hover, #sidebar-first ul.menu li.active-trail > a.active:active, #audience-menu ul.menu li.active-trail > a.active:active, #sidebar-first ul.menu li.active-trail > a.active:focus, #audience-menu ul.menu li.active-trail > a.active:focus, #sidebar-first ul.menu li li > a.active, #audience-menu ul.menu li li > a.active {
  background: none repeat scroll 0 0 #f5f2ed;
  color: inherit; }

#sidebar-first .content > ul.menu > li > a.active, #audience-menu .content > ul.menu > li > a.active {
  color: #c34500; }

#sidebar-first .content > ul.menu > li > a.active:hover, #audience-menu .content > ul.menu > li > a.active:hover, #sidebar-first .content > ul.menu > li > a.active:active, #audience-menu .content > ul.menu > li > a.active:active, #sidebar-first .content > ul.menu > li > a.active:focus, #audience-menu .content > ul.menu > li > a.active:focus {
  color: #fff; }

#audience-menu {
  display: none; }

#footer .menu-block-wrapper > .menu > li {
  float: left;
  margin-left: 8px;
  max-width: 10.2em; }

#footer .menu-block-wrapper > .menu > li.first {
  margin-left: 0; }

#footer .menu-block-wrapper > .menu > li > a {
  font-weight: bold;
  text-transform: uppercase; }

#footer .content > .menu > li {
  float: left;
  margin-left: 8px;
  max-width: 10.2em; }

#footer .content > .menu > li.first {
  margin-left: 0; }

#footer .content > .menu > li > a {
  font-weight: bold;
  text-transform: uppercase; }

#footer .menu-block-wrapper > .menu li, #footer .menu-block-wrapper > .menu li.expanded, #footer .content > .menu li, #footer .content > .menu li.expanded {
  list-style-image: none;
  list-style-type: none; }

#footer .menu {
  margin-left: 0;
  overflow: auto; }

#footer .menu li {
  margin-left: 3px; }

#footer .menu a {
  display: block;
  padding-left: 3px;
  text-decoration: none; }

#footer ul a {
  display: block;
  padding-left: 3px;
  text-decoration: none; }

#footer .social-media {
  padding-top: 5px; }

#footer .social-media a {
  display: block;
  text-decoration: none; }

#footer .social-media i {
  font-size: 18px;
  padding-right: 3px; }

.word-hide {
  text-indent: -9999em; }

.left-hide {
  left: -9999em;
  position: absolute; }

.ui-accordion {
  font-size: 14px; }

.ui-accordion .ui-accordion-header {
  padding-left: 15px; }

.ui-accordion .ui-accordion-header .ui-icon {
  left: 0; }

.ui-accordion .field-items {
  padding: 10px; }

.ui-accordion a {
  color: #c34500; }

.side-blog-list{
  text-align: left; }

.summary-image{
  vertical-align: bottom;
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
}

.fs-row{
  position: relative;
}
/*# sourceMappingURL=styles.css.map */

